--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     body {
       font-family: Arial, sans-serif;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
@@ -15,21 +16,37 @@
       background: #f0f0f0;
     }
     button {
-      font-size: 2rem; /* ボタンの文字サイズを大きく */
-      width: 80%; /* ボタンの幅を画面の80%に設定 */
-      height: 80%; /* ボタンの高さを画面の20%に設定 */
+      font-size: 2rem;
+      width: 80%;
+      height: 80%;
       border: none;
-      border-radius: 10px; /* 柔らかいデザイン */
+      border-radius: 10px;
       background-color: #007bff;
       color: white;
       cursor: pointer;
     }
     button:active {
-      background-color: #0056b3; /* 押下時の色 */
+      background-color: #0056b3;
+    }
+    input[type="number"] {
+      font-size: 1.5rem;
+      margin: 20px 0;
+      padding: 10px;
+      width: 80%;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    label {
+      font-size: 1.2rem;
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
+  <label for="frequency-input">周波数 (Hz):</label>
+  <input id="frequency-input" type="number" min="20" max="20000" value="448" />
+
   <button id="play-sound">押して音を鳴らす</button>
 
   <script>
@@ -37,12 +54,15 @@
     let oscillator;
 
     const startSound = () => {
+      const frequency = parseFloat(document.getElementById('frequency-input').value) || 440;
+
       if (!audioContext) {
         audioContext = new (window.AudioContext || window.webkitAudioContext)();
       }
+
       oscillator = audioContext.createOscillator();
       oscillator.type = 'sine';
-      oscillator.frequency.setValueAtTime(440, audioContext.currentTime);
+      oscillator.frequency.setValueAtTime(frequency, audioContext.currentTime);
       oscillator.connect(audioContext.destination);
       oscillator.start();
     };
